# ENCE361-Helicopter

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
cmake/: FreeRTOS.cmake  OrbitOLED.cmake  OrbitOled.cmake  TivaWare.cmake  TraceRecorder.cmake  tm4c123gh6pm-toolchain.cmake  tm4c123gh6pm.cmake
src/: OrbitOLEDInterface.c  OrbitOLEDInterface.h  adc.c  adc.h  altitude.c  altitude.h  buttons.c  buttons.h  buttons4.c  buttons4.h  calibration.c  calibration.h  circBufT.c  circBufT.h  clock.c  clock.h  config.h  controller.c  controller.h  display.c  display.h  main.c  pid.c  pid.h  pwm.c  pwm.h  pwmConfig.c  pwmConfig.h  quad.c  quad.h  reset.c  reset.h  rotors.c  rotors.h  tasks.c  tasks.h  tm4c123gh6pm_startup.c  uart.c  uart.h  yaw.c  (+1 more)
